# TransInferSim

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  compound_components.yaml  example.py  mem_trace_example.py  pyproject.toml  requirements.txt  setup.py  stats_out.txt
.github/workflows/: python-test.yml
analyzer/: analyzer.py
analyzer/core/hardware/: __init__.py  accelerator.py  generic_memory.py  matmul.py
analyzer/core/model_architectures/convolutional_blocks/: __init__.py  layer.py  model.py
analyzer/core/model_architectures/transformer_blocks/: __init__.py  layer.py  model.py
analyzer/core/simulator/: events.py  simulator.py  utils.py
analyzer/hardware_components/memories/: buffer.py  dedicated.py  offchip.py  shared.py
analyzer/model_architectures/cnns/layers/: __init__.py  convolutional_layer.py
analyzer/model_architectures/transformers/layers/: __init__.py  encoder.py  feed_forward_network.py  grouped_query_attention.py  latent_attention.py  multi_head_latent_attention.py  multi_head_self_attention.py  self_attention.py  swiglu_feed_forward_network.py  test.py
analyzer/model_architectures/transformers/models/: __init__.py  deepseekr1_1_5b.py  deepseekv2.py  deit_tiny.py  gpt2_xl.py  roberta_base.py  roberta_large.py  vit_base.py  vit_large.py  vit_small.py  vit_tiny.py
analyzer/utils/: utils.py
scripts/: setup_submodules.sh
