[project]
name = "transinfersim"
version = "0.2"
description = "Simulation framework for analyzing Transformer NN inference on HW"
authors = [{ name = "Jan Klhufek", email = "iklhufek@fit.vut.cz" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "graphviz==0.20.3",
    "numpy==1.26.4",
    "pyyaml==6.0.2",
    "accelergy",
    "accelergy-aladdin-plug-in",
    "accelergy-cacti-plug-in",
    "accelergy-adc-plug-in",
    "accelergy-neurosim-plug-in",
    "library",
]

[project.urls]
Repository = "https://github.com/ehw-fit/TransInferSim"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["analyzer"]

[tool.uv]
managed = true

[tool.uv.sources]
accelergy = { path = "accelergy" }
accelergy-aladdin-plug-in = { path = "accelergy_plugins/accelergy-aladdin-plug-in" }
library = { path = "accelergy_plugins/accelergy-library-plug-in" }
accelergy-cacti-plug-in = { path = "accelergy_plugins/accelergy-cacti-plug-in" }
accelergy-adc-plug-in = { path = "accelergy_plugins/accelergy-adc-plug-in" }
accelergy-neurosim-plug-in = { path = "accelergy_plugins/accelergy-neurosim-plugin" }

[dependency-groups]
dev = ["pre-commit>=4.3.0", "ruff>=0.11.0"]
viz = ["matplotlib>=3.7", "pandas>=2.0"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Enable comprehensive linting rules
select = [
    "F",   # Pyflakes (includes unused imports that autoflake removes)
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize Python code)
    "B",   # flake8-bugbear (find likely bugs)
    "C4",  # flake8-comprehensions (better list/dict/set comprehensions)
    "SIM", # flake8-simplify (simplify code patterns)
    "PTH", # flake8-use-pathlib (prefer pathlib over os.path)
    "TCH", # flake8-type-checking (optimize type checking imports)
    "RUF", # Ruff-specific rules
]

# Ignore specific rules if needed
ignore = [
    "E501", # Line too long (handled by formatter)
]

# Per-file ignores for common patterns
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["SIM117", "PTH"]
"notebooks/**/*.py" = ["B018", "F401", "F841", "SIM", "PTH"]
"scripts/**/*.py" = ["PTH"]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["analyzer"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
# Use double quotes (black default)
quote-style = "double"
# Preserve magic trailing commas (black default)
skip-magic-trailing-comma = false